K8S_confgi_files/frontend_deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: drawini
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      # initContainers:
      # Init containers are exactly like regular containers, except:
      # - Init containers always run to completion.
      # - Each init container must complete successfully before the next one starts.
      containers:
      - name: frontend
        image: khaledmraadtn/drawini_frontend:latest
        imagePullPolicy: IfNotPresent
        # resources:
        #   requests:
        #     cpu: 200m
        #     memory: 500Mi
        #   limits:
        #     cpu: 200m
        #     memory: 500Mi
        ports:
        - containerPort: 3000
          name: frontend
