K8S_confgi_files/dumy_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: drawini
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
