K8S_confgi_files/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontendservice
  namespace: drawini
spec:
  selector:
    app: frontend
  type: LoadBalancer
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: frontendservice
    protocol: TCP
    port: 8000
    targetPort: 3000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort: 31122
